fix: alignment

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -49,7 +49,7 @@
   font-family: 'Concert One', cursive;
   border: none;
   outline: none;
-  padding: 0rem 0 1.9rem 0em;
+  padding: 0rem 0 1.6rem 0em;
   font-size: 4rem;
   background: #EF4D90;
   border-radius: 1.5rem;
